Added first recipe to the main page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>  
-</body>
+    <h1>Odin Recipes</h1>
+    <a href="recipes/chicken-noodle-salad.html" target="_blank">Chicken Noodle Salad</a>
+    
 </html>
