--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/chicken-noodle-salad.html" target="_blank">Chicken Noodle Salad</a>
+    <ul>
+    <li><a href="recipes/chicken-noodle-salad.html" target="_blank">Chicken Noodle Salad</a></li>
+    <li><a href="recipes/ranch-chicken-tacos.html" target="_blank">Ranch Chicken Tacos</a></li>
+
+    </ul>
     
 </html>
