--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul>
     <li><a href="recipes/chicken-noodle-salad.html" target="_blank">Chicken Noodle Salad</a></li>
     <li><a href="recipes/ranch-chicken-tacos.html" target="_blank">Ranch Chicken Tacos</a></li>
-
+    <li><a href="recipes/asian-lettuce-wraps.html" target="_blank">Asian Lettuce Wraps</a></li>
     </ul>
     
 </html>
